Refactor mcp-api module